# sequence-rs

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: playground.rs
scripts/: fetch_openapi.py
sequence-rs-http/: Cargo.toml
sequence-rs-http/src/: common.rs  lib.rs  reqwest.rs  retry.rs
sequence-rs-model/: Cargo.toml
sequence-rs-model/src/: account.rs  common.rs  error.rs  lib.rs  rule.rs  transfer.rs
sequence-rs-model/tests/: roundtrip.rs
src/: lib.rs  sequence.rs  stream.rs
src/clients/: base.rs  mod.rs
tests/: accounts.rs  errors.rs  retry.rs  rules.rs
tests/helpers/: mod.rs
